# socratic-tutor

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  test_cors.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_01_05_2300-001_initial_migration.py  2026_01_05_2330-002_rename_chunk_metadata.py  2026_01_06_2209-ec3243cbb0e4_add_hnsw_index_for_chunks.py  2026_01_06_2210-fc3576e9d2ff_add_fulltext_search_to_chunks.py  2026_01_11_1200-add_summary_embedding.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  book.py  chapter.py  chunk.py  conversation.py  conversation_summary.py  learning_profile.py  message.py  user.py
backend/app/prompts/: __init__.py  socratic_tutor.py  summary_prompt.py
backend/app/repositories/: __init__.py  base.py  book.py  chapter.py  chunk.py  conversation.py  conversation_summary.py  learning_profile.py  message.py  user.py
backend/app/schemas/: __init__.py  book.py  chapter.py  chunk.py  message.py  (+4 more)
backend/docs/: CORS_FIX.md  PHASE_3_1_CHAT_IMPLEMENTATION.md  RAG_SQL_FIX.md
backend/scripts/: README.md  backfill_summary_embeddings.py  debug_jwt.py  ingest_book.py  interactive_chat.py  test_chat_manual.py  test_memory.py  test_profile_flow.py  test_rag_manual.py
backend/tests/: conftest.py  test_api_conversations.py  test_chat_service.py  test_main.py  test_memory_service.py  test_profile_service.py  test_rag_service.py  test_rag_sql_syntax.py  test_summary_service.py
(+56 files in other folders)
